orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client_Household__c/Client_Household__c.object-meta.xml
<CustomObject>
    <description>Client household for unified family view - Financial Advisor CRM</description>
    <label>Client Household</label>
    <nameField>
        <label>Household Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Households</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>