orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client_Household__c/fields/Annual_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee__c</fullName>
    <label>Annual Fee</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>