orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client_Household__c/fields/Household_Status__c.field-meta.xml
<CustomField>
    <fullName>Household_Status__c</fullName>
    <label>Household Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Prospect</fullName><default>false</default><label>Prospect</label></value>
            <value><fullName>Inactive</fullName><default>false</default><label>Inactive</label></value>
            <value><fullName>Deceased Primary</fullName><default>false</default><label>Deceased Primary</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>