orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client_Household__c/fields/Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Review_Date__c</fullName>
    <label>Last Review Date</label>
    <type>Date</type>
</CustomField>