orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client_Household__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>