orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client_Household__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Households</relationshipLabel>
    <relationshipName>Primary_Households</relationshipName>
</CustomField>