orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client_Household__c/fields/Risk_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tolerance__c</fullName>
    <label>Risk Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Conservative</fullName><default>false</default><label>Conservative</label></value>
            <value><fullName>Moderately Conservative</fullName><default>false</default><label>Moderately Conservative</label></value>
            <value><fullName>Moderate</fullName><default>true</default><label>Moderate</label></value>
            <value><fullName>Moderately Aggressive</fullName><default>false</default><label>Moderately Aggressive</label></value>
            <value><fullName>Aggressive</fullName><default>false</default><label>Aggressive</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>