orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client_Household__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <label>Secondary Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Secondary Households</relationshipLabel>
    <relationshipName>Secondary_Households</relationshipName>
</CustomField>