orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Client_Household__c/fields/Total_AUM__c.field-meta.xml
<CustomField>
    <fullName>Total_AUM__c</fullName>
    <label>Total AUM</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>